--- a/dias-12-Eventos/eventos.html
+++ b/dias-12-Eventos/eventos.html
@@ -6,9 +6,14 @@
     <title>Eventos</title>
 </head>
 <body>
-    <div>
+    <div id="miDiv">
         <button id="boton">boton click</button>
     </div>
+    <a href="https://www.google.com" id="enlace"> ir a GOOGLE </a>
+<div>
+    <input type="text" id="micampo" value="escribe algo">
+</div>
+
 </body>
 <script src="./eventos.js"></script>
 </html>
