--- a/dias-12-Eventos/eventos.html
+++ b/dias-12-Eventos/eventos.html
@@ -11,7 +11,15 @@
     </div>
     <a href="https://www.google.com" id="enlace"> ir a GOOGLE </a>
 <div>
-    <input type="text" id="micampo" value="escribe algo">
+    <input type="text" id="micampo" >
+</div>
+<div>
+    <button id="miBoton">Abrir Menu</button>
+    <ul id="milista" style="display: none;">
+        <li>opcion 1</li>
+        <li>opcion 2</li>
+        <li>opcion 3</li>
+    </ul>
 </div>
 
 </body>
