--- a/dias-12-Eventos/eventos.html
+++ b/dias-12-Eventos/eventos.html
@@ -21,7 +21,24 @@
         <li>opcion 3</li>
     </ul>
 </div>
-
+<div>
+    <form  id="contenedormensaje">
+        <input type="text" id="mensajeingresado" placeholder="Escribir mensaje">
+        <input type="submit" value="enviar" id="btnenviar">
+    </form>
+</div>
+<div id="mensajechat"></div>
+<br>
+<div>
+    <audio controls src="" id="audio1"></audio>
+    <br>
+    <br>
+    <select id="listamusic">
+        <option value="coco.mp3">La llorona de CoCo</option>
+        <option value="hoja.mp3">Hoja en blanco</option>
+        <option value="perdon.mp3"> Perdon</option>
+    </select>
+</div>
 </body>
 <script src="./eventos.js"></script>
 </html>
